Update manifest.json with correct portfolio name and adjust About component styles for better alignment and spacing

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -233,12 +233,12 @@
 @media (max-width: 768px) {
   .container.about-page {
     flex-direction: column;
-    // align-items: center;
+    align-items: center;
   }
 
   .text-zone {
     width: 100%;
-    padding-left: 40px;
+    padding-left: 50px;
     // padding-right: 0;
     // padding: 50px;
   }
